--- a/p01.Rmd
+++ b/p01.Rmd
@@ -2,49 +2,72 @@
 title: "Portfolio 1"
 ---
 
-> The projects should be numbered consecutively (i.e., in the order in which you began them), and should include for each project a description of the goal, the product (computer program, hand graph, computer graph, etc.), the data, and some interpretation. Reports must be reproducible and of high quality in terms of writing, grammar, presentation, etc.
+In this portfolio, I will use the fish encounters data from tidyr.
+First, I need to understand the data set, what's in it, what's measured, what do we have, and then think about what can be done.
 
 ```{r load-packages, message=FALSE}
 library(tidyverse) 
 library(tidyr)
 data(fish_encounters)
+
+dim (fish_encounters)
+cat("Number of observations:", nrow(fish_encounters), "\n")
+cat("Number of variables:", ncol(fish_encounters), "\n")
 ```
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget nibh vel est aliquet iaculis at placerat sem. Aenean faucibus iaculis ultricies. Nullam consequat odio in ultricies ullamcorper. Etiam venenatis in est vitae ullamcorper. Nam vitae urna ut dolor rhoncus aliquet at vel neque. Quisque tristique leo finibus nisi interdum, sit amet tempor risus viverra. Donec mollis vulputate sodales. Nunc ornare, leo quis euismod eleifend, eros mi maximus felis, vel varius lacus dui eget nibh. Duis vitae nunc nisl. Donec accumsan aliquam elit, eu fringilla quam pulvinar eget.
+there are 114 observations of 3 variables (fish (fish identifier), station (measurement station), seen(was the fish seen? 1 if yes)) in the dataset
 
-Mauris in ligula mauris. Curabitur facilisis pharetra metus eget lobortis. In egestas nibh sit amet faucibus eleifend. Suspendisse imperdiet viverra blandit. Phasellus consectetur tincidunt eros eu facilisis. Quisque maximus, orci eget sodales aliquam, velit lorem semper dolor, nec convallis erat ipsum mattis velit. Pellentesque porttitor, mauris vitae aliquam mattis, metus nisl viverra turpis, vel convallis metus sapien et ex. Nunc consequat ipsum id dolor eleifend, sit amet semper eros sodales. Pellentesque consectetur, dui quis venenatis malesuada, nunc lorem lacinia libero, vitae malesuada dui arcu in augue. Aliquam id sagittis libero. Vestibulum aliquet sagittis libero, non posuere odio molestie ut. Curabitur lacus enim, viverra vel odio non, pretium efficitur elit. Mauris posuere efficitur interdum. Nunc sed bibendum turpis, quis fringilla velit. Phasellus eu lorem lobortis eros molestie laoreet.
+Information about fish swimming down a river: each station represents an autonomous monitor that records if a tagged fish was seen at that location. Fish travel in one direction (migrating downstream). Information about misses is just as important as hits, but is not directly recorded in this form of the data.
 
+I will first group the fish_encounters dataset by station to summarize the total number of encounters for each station. This allows us to compare the total fish encounters across different stations.
 
+```{r fishencounters by station }
+fish_encounters_summary <- fish_encounters %>%
+  group_by(station) %>%
+  summarize(
+    count = n() # Count the number of entries for each station
+  ) %>%
+  arrange(desc(count))  # Arrange in descending order by total encounters
 
-```{r}
-# Create a barplot of the number of fish encounters by species
+# View the summarized data
+head(fish_encounters_summary)
+# how many stations in total 
+cat ("Number of stations:", nrow(fish_encounters_summary),"\n")
+
+# the average number of fish encountered across stations 
+average_fishencounter = nrow(fish_encounters)/nrow(fish_encounters_summary)
+cat ("On average, there are", average_fishencounter, "fish encountered across stations.")
+
+## barchart 
 ggplot(data = fish_encounters, aes(x = station, y = seen)) +
   geom_bar(stat = "identity") +
-  labs(x = "Species", y = "Number of Fish Encounters")
-  
+  labs(x = "Station", y = "Number of Fish Encounters")
 ```
 
+there are 11 stations in the dataset. Release station and I80_1station enountered a total of 19 fish, which are the most. 
+on average, each station encountered 10 fish. 
 
-Sed mollis purus faucibus leo finibus, ut pharetra nibh elementum. Nulla id orci lorem. Mauris sollicitudin mi eget tellus vehicula, ut convallis lorem mollis. In blandit nulla diam, a malesuada sem volutpat interdum. Ut elementum elit at velit maximus, ac tempor odio porttitor. Suspendisse lobortis sollicitudin tortor, ut pharetra libero luctus a. Sed hendrerit faucibus metus. Sed rutrum purus vel pellentesque euismod.
+I will group the dataset by fish id.
 
+```{r fishencounters by id }
+fish_encounters_summary2 <- fish_encounters %>%
+  group_by(fish) %>%
+  summarize(
+    count = n() # Count the number of entries for each station
+  ) %>%
+  arrange(desc(count))  # Arrange in descending order by total encounters
 
-```{r}
-# Create a barplot of the number of fish encounters by species
-ggplot(data = fish_encounters, aes(x = station, y = seen)) +
+# View the summarized data
+head(fish_encounters_summary2)
+
+# how many fish in total 
+cat ("Number of fish:", nrow(fish_encounters_summary2),"\n")
+
+#barchart
+ggplot(data = fish_encounters, aes(x = fish, y = seen)) +
   geom_bar(stat = "identity") +
   labs(x = "Species", y = "Number of Fish Encounters")
-  
 ```
 
-Mauris placerat in velit a pharetra. Nulla viverra bibendum lectus, ut lobortis nibh. Aenean malesuada, orci vitae dictum placerat, enim justo aliquet leo, ac tincidunt augue ipsum et mi. Nullam in pharetra metus, nec molestie felis. Duis varius rhoncus pulvinar. Integer semper urna sed tellus rhoncus, vel suscipit odio iaculis. Mauris iaculis neque pellentesque ex convallis venenatis. Sed ultrices euismod fermentum. Ut feugiat risus at turpis tincidunt viverra.
+There are 19 fish in the data set. Across all stations, five fish were encountered the most, 11 times each.
 
-
-```{r}
-# Create a barplot of the number of fish encounters by species
-ggplot(data = fish_encounters, aes(x = station, y = seen)) +
-  geom_bar(stat = "identity") +
-  labs(x = "Species", y = "Number of Fish Encounters")
-  
-```
-
-Donec sagittis suscipit orci in ultrices. Vivamus iaculis eleifend est et dictum. Fusce non urna at lacus dapibus tincidunt ac sed nibh. Donec luctus lectus elit, ac ultrices tortor mollis sit amet. Nulla finibus lacinia arcu. Proin sollicitudin non odio et pulvinar. Maecenas finibus faucibus finibus. Ut elementum metus velit, a sodales sapien commodo et. Vivamus pulvinar, sapien et porta cursus, elit est luctus nisi, eget fringilla odio diam et enim. Sed sodales suscipit bibendum. Morbi ut metus semper, laoreet felis sodales, consequat dolor.
